The styling was adjusted

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@ body {
   width: 700px;
 
   @for $i from 1 through length($month-lengths) {
+    // stylelint-disable-next-line scss/no-global-function-names
     $month-length: nth($month-lengths, $i);
     &.calendar--month-length-#{$month-length} {
       .calendar__day:nth-child(n + #{$month-length + 1}) {
