--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,9 +1,9 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  max-width: ($day-size * $row-numbers) + 10px;
+  width: ($day-size * $row-numbers) + ($gap-size * ($row-numbers - 1)) + ($paddings * 2);
   padding: $paddings;
-  gap: 1px;
+  gap: $gap-size;
 
   &__day {
     display: flex;
