--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,65 @@
-body {
+$days-in-week: 7;
+$days-of-week: (mon, tue, wed, thu, fri, sat, sun);
+$bg-day-color: #eee;
+$bg-day-color-hover: pink;
+$font-size: 30px;
+$cell-size: 100px;
+$cell-border: 1px;
+$cell-gap: 1px;
+$calendar-size: ($cell-size * $days-in-week) + ($cell-gap * ($days-in-week - 1));
+
+html, body {
+  font-family: Arial, sans-serif;
+  font-size: $font-size;
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $cell-gap;
+  max-width: $calendar-size;
+  max-height: $calendar-size;
+
+  &__day {
+    box-sizing: border-box;
+    background-color: $bg-day-color;
+    height: $cell-size;
+    width: $cell-size;
+    border: $cell-border solid black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: transform 500ms;
+    padding: 10px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $bg-day-color-hover;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $n from 1 through 31 {
+    &__day:nth-child(#{$n}):before {
+      content: '#{$n}';
+    }
+  }
+
+  @each $day in $days-of-week {
+    $index: list.index($days-of-week, $day);
+    $offset: ($cell-size + $cell-gap) * ($index - 1);
+
+    &--start-day--#{$day} :first-child {
+      margin-left: $offset;
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length--#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
