--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,5 +9,5 @@ $weekdays: (
 );
 $month-lengths: 28, 29, 30, 31;
 $calendar-day-gap: 1px;
-$calendar-day-width: 100px - $calendar-day-gap;
-$calendar-day-flex-basis: $calendar-day-width - $calendar-day-gap;
+$calendar-cell-size: 100px;
+$calendar-day-flex-basis: $calendar-cell-size - $calendar-day-gap;
