--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
-body {
+@import './utils/mixins';
+@import './utils/variables';
+@import './blocks/calendar';
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
 }
