--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,66 @@
+$box-size: 100px;
+$box-gap: 1px;
+$calendar-padding: 10px;
+$calendar-size: $box-size * 7 + $calendar-padding;
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: $box-gap;
+  width: $calendar-size;
+  padding: $calendar-padding;
+
+  &_block {
+    box-sizing: border-box;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    text-align: center;
+    line-height: 100px;
+    background-color: #eee;
+    position: relative;
+    font-size: 30px;
+    transition: 0.5s;
+  }
+
+  &_block:hover {
+    background-color: pink;
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
+
+}
+
+$days-of-week: (
+  'mon' 0,
+  'tue' 1,
+  'wed' 2,
+  'thu' 3,
+  'fri' 4,
+  'sat' 5,
+  'san' 6
+);
+
+@each $day, $number in $days-of-week {
+  .calendar--start-day--#{$day} .calendar_block:nth-child(1) {
+    margin-left: $number * ($box-size + $box-gap);
+  }
+}
+
+@for $i from 28 to 31 {
+  .calendar--month-length--#{$i} .calendar_block:nth-child(n + #{$i + 1}) {
+    display: none;
+  }
+}
+
+@for $number from 1 to 32 {
+  .calendar_block:nth-child(n + #{$number})::before {
+    content: "#{$number}";
+  }
 }
