--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,46 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  width: 707px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  gap: 1px;
+  padding: 10px;
+}
+
+.calendar-day {
+  width: 100px;
+  height: 100px;
+  box-sizing: border-box;
+  background-color: #eee;
+  border: 1px solid black;
+  transition: .5s;
+
+  &:hover {
+    background-color: pink;
+    transform: translateY(-20px);
+    cursor: pointer;
+  }
+
+  &::before {
+    content: '';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    line-height: 90px;
+  }
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i}) {
+      display: block;
+
+      &::before {
+        content: '#{$i}';
+      }
+    }
+  }
+}
