--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ body {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  align-content: center;
 
   padding: 10px;
   height: 100vh;
@@ -53,12 +54,8 @@ body {
   @each $day, $size in $days-of-week {
     &--start-day-#{$day} {
       .calendar__day:first-child {
-      margin-left: #{$size};
+      margin-left: $size * $start-day-size;
       }
     }
   }
 }
-
-
-
-
