--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,5 @@
-$start-day-size: 100px;
+$-day-size: 100px;
 $gap: 1px;
-$days-of-week: mon 0,
-tue ($start-day-size + $gap) * 1,
-wed ($start-day-size + $gap) * 2,
-thu ($start-day-size + $gap) * 3,
-fri ($start-day-size + $gap) * 4,
-sat ($start-day-size + $gap) * 5,
-sun ($start-day-size + $gap) * 6;
+$start-day-size: $-day-size + $gap;
+$days-of-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 $month-lengths: 28, 29, 30, 31;
