fixed calendar width

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,9 +1,8 @@
 .calendar {
   @include flex-container;
 
-  padding: $padding;
   flex-wrap: wrap;
-  width: $cell-size * 7 + $gap * 6;
+  width: ($cell-size * 7) + ($gap * 6);
 
   &__day {
     display: flex;
