--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,10 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
