--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,7 @@
 $cell-size: 100px;
 $border-color: #000;
 $bg-color: #eee;
-$bg-color-hover: #ff66b2;
+$bg-color-hover: #f580bb;
 $font-size: 30px;
 $gap: 1px;
 $animation-duration: 0.5s;
