--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
-body {
+@import './utils/variables';
+@import "./blocks/calendar";
+@import "./blocks/body";
+
+body,
+p,
+h1,
+h2,
+h3 {
   margin: 0;
 }
