--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,14 @@
+@import './utils/variables';
+@import './calendar';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
