--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -21,10 +21,10 @@
     }
   }
 
-  @each $day, $col in $week {
+  @each $day, $numberday in $week {
     &--start-day-#{$day} {
       :first-child {
-        margin-left: ($cell-size + $gap) * $col ;
+        margin-left: ($cell-size + $gap) * $numberday ;
       }
     }
   }
@@ -41,7 +41,7 @@
   }
 
   @for $day from 28 through 31 {
-    &--month-length-#{$day} {
+    &--month-lenth-#{$day} {
       :nth-child(n + #{$day + 1}) {
         display: none;
       }
