--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,7 +3,8 @@ $cell-color: #eee;
 $cell-hover-color: #FFC0CB;
 $calendar-padding: 10px;
 $gap: 1px;
-$week: mon 0,
+$week:
+  mon 0,
   tue 1,
   wed 2,
   thu 3,
