add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -41,7 +41,7 @@
   }
 
   @for $day from 28 through 31 {
-    &--month-lenth-#{$day} {
+    &--month-length-#{$day} {
       :nth-child(n + #{$day + 1}) {
         display: none;
       }
