--- a/src/styles/bloks/calendar.scss
+++ b/src/styles/bloks/calendar.scss
@@ -5,6 +5,7 @@
   gap: $gap;
   padding: $paddings;
 
+
   @each $week, $day in $week-days {
     &--start-day-#{$week}
     &__day:first-child{
@@ -29,6 +30,7 @@
     text-align: center;
     line-height: $size-square-day;
     transition-duration: 0.5s;
+    box-sizing: border-box;
 
     @for $numbr from 1 through $number-days-month {
       &:nth-child(#{$numbr})::before{
