--- a/src/styles/bloks/variables.scss
+++ b/src/styles/bloks/variables.scss
@@ -12,4 +12,4 @@ $week-days: (
   sat: 5,
   sun: 6,
 );
-$size-square-with-gap: $size-square-day + $gap + 1;
+$size-square-with-gap: $size-square-day + $gap;
