placed the calendar in center of the page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
 @import "../styles/bloks/variables";
 @import "../styles/bloks/body";
+@import "../styles/bloks/html";
 @import "../styles/bloks/calendar";
