add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,10 @@
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 $days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6,);
@@ -33,6 +37,7 @@ $month-length: 28, 29, 30;
   display: flex;
   gap: var(--gap-size);
   width: 706px;
+  min-width: 706px;
   flex-wrap: wrap;
   padding: 10px;
 
