--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,69 @@
+@import 'variable';
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  width: $calendar-width;
+}
+
+.calendar__day {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $border-width;
+  padding: $padding-for-table;
+}
+
+.calendar__days {
+  box-sizing: border-box;
+  height: $day-size;
+  width: $day-size;
+  border: $border-width solid black;
+  background-color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: $font-size;
+  position: relative;
+
+  &:hover {
+    cursor: pointer;
+    background-color: pink;
+    transform: translateY(-20px);
+    transition: background-color $animation-duration, transform $animation-duration;
+  }
+
+  @each $day in $mon, $tue, $wed, $thu, $fri, $sat, $sun {
+    &.start-#{$day} {
+      $day-index: get-day-index($day);
+
+      @if $day-index {
+        margin-left: $day-size * $day-index + $border-width;
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &.month-length-#{$i} {
+      &:nth-child(#{$i}) {
+        background-color: lightblue;
+      }
+    }
+  }
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i})::before {
+      content: "#{$i}";
+      font-size: $number-font-size;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
