--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-body {
-  margin: 0;
-}
+@import '/src/styles/utils/variable';
+@import '/src/styles/blocks/calendar';
+@import '/src/styles/blocks/page';
