refacrored layout calendar

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $square-gap-size: 1px;
 $days-in-row: 7;
 $square-size-full: calc($square-size + $square-gap-size + $square-border-size * 2);
 $square-color: #eee;
-$calendar-font-family: Arial;
+$calendar-font-family: Arial, sans-serif;
 $days: (
   'mon': 0,
   'tue': 1,
