--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -2,11 +2,12 @@ $gap: 1px;
 $size: 100px;
 $padding: 10px;
 $day-count: 7;
-$day-numder:
+$day-numder: (
   'mon' 0,
   'tue' 1,
   'wed' 2,
   'thu' 3,
   'fri' 4,
   'sat' 5,
-  'sun' 6;
+  'sun' 6,
+);
