--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@ body {
 $days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6,);
 
 @each $name, $index in $days {
-  .start-day-#{$name} > div:first-child {
+  .start--day-#{$name} > div:first-child {
     margin-left: calc((var(--day-size) + var(--gap-size)) * #{$index});
   }
 }
@@ -22,7 +22,7 @@ $days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6,);
 $month-length: 28, 29, 30;
 
 @each $length in $month-length {
-  .month-length-#{$length} {
+  .month--length-#{$length} {
     .month__day {
       @for $i from $length + 1 through 31 {
         &:nth-child( #{$i} ) {
