--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
+$cell-size: 100px;
+$cell-gap: 1px;
+$cell-color: #eee;
+$cell-color-hover: #ffd3e1;
+$calendar-padding: 10px;
+$number-size: 30px;
+$number-font: Arial, sans-serif;
+$number-color: #000;
+$days-of-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
 body {
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  margin: auto;
+  padding: $calendar-padding;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: 7 * $cell-size + 6 * $cell-gap;
+  font-family: $number-font;
+  font-size: $number-size;
+
+  @each $day, $index in $days-of-week {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($cell-size + $cell-gap) * $index;
+    }
+  }
+
+  @for $curret-month-size from 28 through 31 {
+    &--month-lenght--#{$curret-month-size} :nth-child(n + #{$curret-month-size + 1}) {
+    display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    height: $cell-size;
+    width: $cell-size;
+    background-color: $cell-color;
+    transition: transform 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $cell-color-hover;
+      transform: translate(0, -20px);
+    }
+
+    @for $cell from 1 through 31 {
+      &:nth-child(#{$cell})::before {
+        content: '#{$cell}';
+      }
+    }
+  }
+}
+
+
