--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@ body {
   background-color: #eee;
   border: 1px solid black;
   transition: .5s;
+  position: relative;
 
   &:hover {
     background-color: pink;
