add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+:root {
+  --start-day: 1;
+  --month-length: 31;
+}
+
 body {
   margin: 0;
 }
@@ -6,7 +11,7 @@ body {
   width: 707px;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 180px auto;
   gap: 1px;
   padding: 10px;
 }
