--- a/src/styles/blocks/vars.scss
+++ b/src/styles/blocks/vars.scss
@@ -6,8 +6,7 @@ $day-height: 100px;
 $day-bg-color: #eee;
 $day-bg-hover-color: rgb(228, 133, 166);
 $day-border-color: #000;
-$calendar-width:
-  ($days-in-row * $day-width)
-  + (2 * $calendar-padding)
-  + (($days-in-row - 1 * $calendar-gap));
+$calendar-width: (
+  $days-in-row * $day-width) + (2 * $calendar-padding) + (($days-in-row - 1 * $calendar-gap)
+);
 $days-and-dates: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
