add task solution

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -6,4 +6,4 @@ $number-font-size: 30px;
 $padding-for-table: 10px;
 $animation-duration: 0.5s;
 $days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6,);
-$month-length: 28, 29, 30, 31;
+$month-length: 28, 29, 30;
