--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+@import "./variables.";
+@import "./calendar.";
+
 body {
-  margin: 0;
+  margin: 40px 0 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+
+  display: flex;
+  justify-content: center;
 }
