--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+@import '../styles/variable';
+
 body {
   margin: 0;
+  font-family: $calendar-font;
+  font-size: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $square-gap-size;
+  padding: $calendar-padding;
+  width: $calendar-width;
+
+  @each $day, $day-number in $days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: $day-number * $square-size-full;
+    }
+  }
+
+  @for $days-number from 28 through 31 {
+    &--mounth-length-#{$days-number} &__day:nth-child(n + #{$days-number + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: $square-main-color;
+    height: $square-size;
+    width: $square-size;
+    border: solid $square-border-size black;
+    border-radius: 5px;
+
+    transition: 500ms;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $square-hover-color;
+      transform: translateY(-20px);
+    }
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
+      }
+    }
+  }
 }
