add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,11 +16,11 @@ body {
 
   width: $calendar-width;
   gap: $square-gap-size;
-  padding: 10px;
+  padding: 10%;
 
   @each $day, $day-number in $days {
     &--start-day-#{$day} &__day:first-child {
-      margin-left: $day-number * $square-size-full;
+    scroll-margin-right:  $day-number * $square-size-full;
     }
   }
 
@@ -51,8 +51,8 @@ body {
     &:hover {
       cursor: pointer;
       background-color: #FFBFCB;
-      transform: translateY(-20px);
-      transition-duration: 0.5s;
+      transform: translateY(-20px); 
+      
     }
   }
 }
