--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
 
 }
 
@@ -20,7 +22,7 @@ body {
 
   @each $day, $day-number in $days {
     &--start-day-#{$day} &__day:first-child {
-    scroll-margin-right:  $day-number * $square-size-full;
+    margin-left:  $day-number * $square-size-full;
     }
   }
 
