--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,11 +7,16 @@ body {
   display: flex;
   align-items: center;
   font-size: $main-font-size;
+  font-family: Arial, sans-serif;
 }
 
-* {
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  border: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
 }
 
 .calendar {
