--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+$calendar-day-size: 100px;
+$days-of-mouth: "tue" 1 1px, "wed" 2 2px, "thu" 3 3px, "fri" 4 4px, "sat" 5 5px, "sun" 6 6px;
+
 body {
   margin: 0;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  gap: 1px;
+  flex-wrap: wrap;
+  width: 7 * $calendar-day-size + 10px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    width: $calendar-day-size;
+    height: $calendar-day-size;
+    font-size: 30px;
+    background-color: #eee;
+    cursor: pointer;
+
+    transition: all ease 0.5s;
+  }
+
+  &__day:hover {
+    background-color: #ffcccb;
+    transform: translateY(-20px);
+  }
+
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day})::before {
+      content: '#{$day}';
+    }
+  }
+
+  @each $start, $index, $index-px in $days-of-mouth {
+    &--start-day-#{$start} {
+      .calendar__day:first-child {
+        margin-left: $calendar-day-size * $index + $index-px;
+      }
+    }
+  }
+
+  @for $days from 28 through 31 {
+    &--month-length-#{$days} {
+      $end-day: $days + 1;
+
+      .calendar__day:nth-child(n + #{$end-day}) {
+        display: none;
+      }
+    }
+  }
 }
