--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 $calendar-day-size: 100px;
-$days-of-mouth: "tue" 1 1px, "wed" 2 2px, "thu" 3 3px, "fri" 4 4px, "sat" 5 5px, "sun" 6 6px;
+$days-of-month: "tue" 1 1px, "wed" 2 2px, "thu" 3 3px, "fri" 4 4px, "sat" 5 5px, "sun" 6 6px;
 
 body {
   margin: 0;
@@ -39,7 +39,7 @@ body {
     }
   }
 
-  @each $start, $index, $index-px in $days-of-mouth {
+  @each $start, $index, $index-px in $days-of-month {
     &--start-day-#{$start} {
       .calendar__day:first-child {
         margin-left: $calendar-day-size * $index + $index-px;
