--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,11 +1,11 @@
 $days-in-row: 7;
-$day-width: 100px;
-$day-height: 100px;
+$day-size: 100px;
 $calendar-gap: 1px;
 $day-color: #eee;
 $calendar-padding: 10px;
 $day-border-color: #000;
 $day-hover-color: rgb(250, 151, 185);
 $calendar-width: (
-  $days-in-row * $day-width) + (2 * $calendar-padding) + (($days-in-row - 1 * $calendar-gap)
+  $days-in-row * $day-size) + (2 * $calendar-padding) + (($days-in-row - 1 * $calendar-gap)
 );
+$days-in-week: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
