--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import './utils/variables';
+@import './calendar/calendar';
+
 body {
   margin: 0;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
