--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import "./variables";
 
+html {
+  font-family: Arial, sans-serif;
+}
+
 body {
   margin: 0;
 }
@@ -37,19 +41,19 @@ body {
     transition: .5s;
 
     @for $i from 1 through 31 {
-      &:nth-child(#{$i}) {
-        &::before {
+      &:nth-child(#{$i})::before {
           content: "#{$i}";
-          display: block;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          font-family: Arial, sans-serif;
-          font-size: 30px;
-        }
       }
     }
+
+    &::before {
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 30px;
+   }
 
     &:hover {
       transform: translateY(-20px);
