--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,54 +1,48 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  max-width: calc(7 * ($day-size + $gap));
+  width: $day-size * $columns-month + $gap * ($columns-month - 1);
   gap: $gap;
   padding: $padding;
 
-  &-day {
-    display: flex;
-    box-sizing: border-box;
-    width: $day-size;
-    height: $day-size;
-    background-color: #eee;
-    font-size: 30px;
-    border: 1px solid black;
-    position: relative;
-    justify-content: center;
-    transition: transform 0.5s ease;
+
+  @each $week, $day in $week-days {
+    &--start-day-#{$week}
+    &__day:first-child{
+      margin-left: $day * ($day-size + $gap);
+    }
   }
 
-  &-day::before {
-    content: '';
-    position: absolute;
-    line-height: $day-size;
-  }
-
-  &-day:hover {
-    cursor: pointer;
-    background-color: #FFBFCB;
-    transform: translateY(-20px);
-  }
-}
-
-@for $date from 1 through 31 {
-  .calendar-day:nth-child(#{$date})::before {
-    content: '#{$date}';
-  }
-}
-
-@for $length from 28 through 31 {
-  .calendar--month-length--#{$length} {
-    .calendar-day:nth-child(n + #{$length + 1}) {
+  @for $current-number-day from 28 through 31 {
+    &--month-length-#{$current-number-day}
+    &__day:nth-child(n + #{$current-number-day + 1}) {
       display: none;
     }
   }
-}
 
-@each $day, $index in $days {
-  .calendar--start-day--#{$day} {
-    .calendar-day:first-child {
-      margin-left: ($index * ($day-size + $gap));
+  &__day {
+    width: $day-size;
+    height: $day-size;
+    border: 1px solid black;
+    background-color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    text-align: center;
+    line-height: $day-size;
+    transition-duration: 0.5s;
+    box-sizing: border-box;
+
+    @for $number from 1 through $days-in-month {
+      &:nth-child(#{$number})::before{
+        content: "#{$number}";
+      }
+    }
+
+    &:hover {
+      background-color: pink;
+      cursor: pointer;
+      transform: translateY(-20px);
+      transition-duration: 0.5s;
     }
   }
 }
