--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,9 @@
 $day-size: 100px;
 $padding: 10px;
 $gap: 1px;
-$days: (
+$columns-month: 7;
+$days-in-month: 31;
+$week-days: (
   mon: 0,
   tue: 1,
   wed: 2,
