--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,57 @@
+@import './variables';
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  padding: 10px;
+  border: 2px solid red;
+  width: $size-cell * 7 + 6;
+
+  &__field {
+    display: flex;
+    gap: 1px;
+    flex-wrap: wrap;
+  }
+
+  &__day {
+    box-sizing: border-box;
+    height: $size-cell;
+    width: $size-cell;
+    border: 1px solid #000;
+    background-color: #eee;
+    transition-duration: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+  }
+
+  &__day:nth-child(1) {
+      margin-left: $size-cell * ($start-day - 1) + $start-day - 1;
+    }
+
+  @for $num from 1 to $month-days + 1 {
+    &__day:nth-child( #{$num})::before{
+      content: '#{$num}';
+      font-size: $size-number;
+      position: absolute;
+    }
+  }
+
+  @for $num from $month-days + 1 to 32 {
+    &__day:nth-child( #{$num}) {
+      visibility: hidden;
+    }
+  }
 }
