--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,6 @@ $size-number: 30px;
 $font-number: Arial;
 $column: 7;
 $row: 5;
-$month-days: 31;
+$month-days: 28, 29, 30, 31;
 $start-day: 7;
-$days: "mon" 1, "tue" 2, "wed" 3, "thu" 4, "fri" 5, "sat" 6, "sun" 7;
+$days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
