--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,81 @@
-body {
-  margin: 0;
+:root {
+  --day-size: 100px;
+  --day-border: 1px solid black;
+  --day-font-size: 30px;
+  --day-color: #eee;
+  --day-hover-color: #FFBFCB;
+  --day-hover-transform: translateY(-20px);
+  --day-transition: all 0.5s ease;
+  --calendar-width: calc(7 * var(--day-size) + 10px);
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: var(--calendar-width);
+  margin: 10px;
+  border-collapse: collapse;
+}
+
+.calendar__day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--day-size);
+  height: var(--day-size);
+  border: var(--day-border);
+  box-sizing: border-box;
+  background-color: var(--day-color);
+  font-family: Arial;
+  font-size: var(--day-font-size);
+  transition: var(--day-transition);
+}
+
+.calendar__day:hover {
+  cursor: pointer;
+  background-color: var(--day-hover-color);
+  transform: var(--day-hover-transform);
+}
+
+.calendar__day::before {
+  content: attr(data-day);
+}
+
+.calendar__day:nth-child(7n + 1) {
+  margin-left: 0;
+}
+
+.calendar__day--start-day-mon {
+  margin-left: calc(var(--day-size) + 10px);
+}
+
+.calendar__day--start-day-tue {
+  margin-left: calc(2 * var(--day-size) + 20px);
+}
+
+.calendar__day--start-day-wed {
+  margin-left: calc(3 * var(--day-size) + 30px);
+}
+
+.calendar__day--start-day-thu {
+  margin-left: calc(4 * var(--day-size) + 40px);
+}
+
+.calendar__day--start-day-fri {
+  margin-left: calc(5 * var(--day-size) + 50px);
+}
+
+.calendar__day--start-day-sat {
+  margin-left: calc(6 * var(--day-size) + 60px);
+}
+
+.calendar__day--start-day-sun {
+  margin-left: 0;
+}
+
+.calendar__day--month-length-28:nth-child(n+29),
+.calendar__day--month-length-29:nth-child(n+30),
+.calendar__day--month-length-30:nth-child(n+31),
+.calendar__day--month-length-31:nth-child(n+32) {
+  display: none;
 }
