--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@
   border: var(--day-border);
   box-sizing: border-box;
   background-color: var(--day-color);
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   font-size: var(--day-font-size);
   transition: var(--day-transition);
 }
