--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import './variables';
 
 * {
-  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,20 +13,20 @@ body {
 }
 
 .calendar {
-  padding: 10px;
-  border: 2px solid red;
-  width: $size-cell * 7 + 6;
+  margin: 0;
+  padding: $padd;
+  width: $size-cell * $column + 2 * $padd + $column - 1;
   display: flex;
   gap: 1px;
   flex-wrap: wrap;
 
   &__day {
-    box-sizing: border-box;
+    margin: 0;
     height: $size-cell;
     width: $size-cell;
     border: 1px solid #000;
     background-color: #eee;
-    transition-duration: 0.5s;
+    transition: all 0.5s ease-in 0.1s;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,8 +51,7 @@ body {
   .calendar--month-length-#{$daysmonth} {
     @for $num from $daysmonth + 1 to 32 {
       .calendar__day:nth-child( #{$num}) {
-        visibility: hidden;
-        position: absolute;
+        display: none;
       }
     }
   }
