--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,7 +38,7 @@ body {
     }
   }
 
-  @for $num from 1 to 32 {
+  @for $num from 1 through 31 {
     &__day:nth-child( #{$num})::before{
       content: '#{$num}';
       font-size: $size-number;
@@ -65,3 +65,10 @@ body {
     }
   }
 }
+
+/* npm uninstall -g @mate-academy/scripts
+rm -rf node_modules package-lock.json
+npm cache clean --force
+npm i -g @mate-academy/scripts
+npm i
+ */
