--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -13,7 +13,7 @@ body {
   gap: $gap;
   padding: $square-padding;
   text-align: center;
-  line-height: $sq;
+  line-height: $square-width;
 
   @each $week, $day in $week-days {
     &--start-day-#{$week}
