--- a/src/styles/utils/_functions.scss
+++ b/src/styles/utils/_functions.scss
@@ -1,9 +1,9 @@
 @use './variables' as *;
 
 @function calendar-width() {
-  @return $day-width * 7 + $gap-between-days * 6 + $calendar-padding * 2;
+  @return $day-size * 7 + $gap-between-days * 6 + $calendar-padding * 2;
 }
 
 @function first-day-margin($day-of-week-number) {
-  @return ($day-width + $gap-between-days) * ($day-of-week-number - 1);
+  @return ($day-size + $gap-between-days) * ($day-of-week-number - 1);
 }
