--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,60 +1,68 @@
-$base-color: #eee;
-$border-color: #000;
-$font-size: 30px;
 $cell-size: 100px;
-$calendar-width: 7 * $cell-size + 10px;
-$left-margin-modifier: 20px;
-$redundant-days-modifier: 31;
-$days: mon tue wed thu fri sat sun;
-$month-lengths: 28 29 30 31;
-
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
-
-.calendar-cell {
-  width: $cell-size;
-  height: $cell-size;
-  border: 1px solid $border-color;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  font-size: $font-size;
-  background-color: $base-color;
-
-  &:hover {
-    cursor: pointer;
-    background-color: pink;
-    transition: all 0.5s ease;
-    transform: translateY(-20px);
-  }
-}
+$border-color: #000;
+$background-color: #eee;
+$text-color: #000;
+$hover-color: #FFBFCB;
+$animation-duration: 0.5s;
+$days-of-week: (
+  "sun": 0,
+  "mon": 1,
+  "tue": 2,
+  "wed": 3,
+  "thu": 4,
+  "fri": 5,
+  "sat": 6
+);
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $calendar-width;
-}
+  gap: 1px;
+  padding: 10px;
+  width: calc(7 * #{$cell-size} + 6 * 1px + 2 * 10px);
+  margin: 0 auto;
+  text-align: center;
 
-@for $day from 1 through $redundant-days-modifier {
-  .calendar-cell:nth-child(#{$day})::before {
-    content: '#{$day}';
+  @for $last-day from 28 to 31 {
+    &--month-length--#{$last-day} .calendar__day:nth-child(n + #{$last-day + 1}) {
+      display: none;
+    }
   }
-}
 
-@each $day, $index in mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7 {
-  .start-day-#{$day} {
-    margin-left: $index * ($cell-size + 1px) + $left-margin-modifier;
+  @each $start-day, $first-cell in $days-of-week {
+    &--start-day-#{$start-day} .calendar__day {
+      margin-left: calc(#{$first-cell} * (#{$cell-size} + 1px));
+    }
   }
-}
 
-@for $month-length from 28 through 31 {
-  .calendar--month-length-#{$month-length} .calendar-cell:nth-child(n + #{$month-length + 1}) {
-    display: none;
+  &__day {
+    width: #{$cell-size};
+    height: #{$cell-size};
+    border: 1px solid $border-color;
+    background-color: $background-color;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial,sans-serif;
+    font-size: 30px;
+
+    &::before {
+      content: '';
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translateY(-20px);
+      transition: background-color $animation-duration, transform $animation-duration;
+    }
+
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
   }
 }
