--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@ body {
   }
 
   @for $days-number from 28 through 31 {
-    &--mounth-length-#{$days-number} &__day:nth-child(n + #{$days-number + 1}) {
+    &--mouth-length-#{$days-number} &__day:nth-child(n + #{$days-number + 1}) {
       display: none;
     }
   }
